# wadice

./: Cargo.toml  Makefile  README.md  mod.yaml  wadm.yaml  wasmcloud.toml
.github/workflows/: build.yml  release.yml
src/: lib.rs
