[package]
name = "wadice"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "wadice"

[dependencies]
futures = "0.3"
form_urlencoded = "1.0"
wasmbus-rpc = "0.8.2"
wasmcloud-interface-httpserver = "0.5"
wasmcloud-interface-numbergen = "0.5"
d20 = { version = "0.2.0", git = "https://github.com/brooksmtownsend/d20", branch = "wasm32-support" }

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true
