[package]
name = "wadice"
version = "0.2.0"
authors = [ "Brooks Townsend" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "wadice"

[dependencies]
futures = "0.3"
wasmbus-rpc = "0.10"
wasmcloud-interface-httpserver = "0.7"
wasmcloud-interface-numbergen = "0.7"
wasmcloud-interface-logging = "0.7"
d20 = { version = "0.2.0", git = "https://github.com/brooksmtownsend/d20", branch = "wasm32-support" }
rust-embed = "6.4.0"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true
